<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="17dp"
              android:paddingRight="17dp"
        >

    <EditText android:id="@+id/accountName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:hint="@string/account_login"
              android:inputType="textPersonName"
              android:padding="10dp"
            />

    <EditText android:id="@+id/accountPassword"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:inputType="textPassword"
              android:hint="@string/account_password"
              android:padding="10dp"
            />

    <Button android:id="@+id/submit"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:text="@string/account_signin"
              android:padding="10dp"/>

    <TextView android:id="@+id/signUp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/account_new"
              android:padding="10dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/tsuki4"
            android:contentDescription="@string/tsukotan"/>

</LinearLayout>

